# ing_task

./: .env  Dockerfile  README.md  baddata.json  consumer.py  data.json  description.md  docker-compose.yaml  event_generator.py  main.py  publisher.py  pyproject.toml  sampledata.json  test_generator.py  test_main.py  tmp.py
